# cacao

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  .travis.yml  00CORE_2README_8md.html  00CORE_8c.html  00CORE_8c.js  00CORE_8h.html  00CORE_8h.js  00CORE_8h_source.html  3_810_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_810_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  3_810_82_2CompilerIdC_2CMakeCCompilerId_8c.html  3_810_82_2CompilerIdC_2CMakeCCompilerId_8c.js  3_811_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_811_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  3_811_81_2CompilerIdC_2CMakeCCompilerId_8c.html  3_811_81_2CompilerIdC_2CMakeCCompilerId_8c.js  AOload_8c.html  AOload_8c.js  AOloop0_8conf.html  AOloopControl_2README_8md.html  AOloopControl_8c.html  AOloopControl_8c.js  AOloopControl_8h.html  AOloopControl_8h.js  AOloopControl_8h_source.html  AOloopControl_8md.html  AOloopControl__AOcompute_8c.html  AOloopControl__AOcompute_8c.js  AOloopControl__AOcompute_8h.html  AOloopControl__AOcompute_8h.js  AOloopControl__AOcompute_8h_source.html  AOloopControl__AutoTuneGains_8c.html  AOloopControl__AutoTuneGains_8c.js  AOloopControl__CompModes__loop_8c.html  AOloopControl__CompModes__loop_8c.js  (+1260 more)
AOloopControl/: .gitignore  AOload.c  AOloopControl.c  AOloopControl.h  AOloopControl_AOcompute.c  AOloopControl_AOcompute.h  AOloopControl_AutoTuneGains.c  AOloopControl_CompModes_loop.c  AOloopControl_ProcessModeCoefficients.c  AOloopControl_ProcessModeCoefficients.h  AOloopControl_RTstreamLOG.c  AOloopControl_aorun.c  AOloopControl_aorun.h  AOloopControl_arpf_onoff.c  AOloopControl_autotune.c  AOloopControl_autotune.h  AOloopControl_dm.c  AOloopControl_dm.h  AOloopControl_dmwrite.c  AOloopControl_fpspeckle_mod.c  AOloopControl_initmem.c  AOloopControl_loadconfigure.c  AOloopControl_loop_ctr.c  AOloopControl_loop_onoff.c  AOloopControl_loop_param.c  AOloopControl_predfilter_onoff.c  AOloopControl_process_files.c  AOloopControl_read_param.c  AOloopControl_sig2Modecoeff.c  AOloopControl_time_param.c  AOloopControl_wfs.c  CMakeLists.txt  modalCTRL_stats.c  modalCTRL_stats.h  modalfilter.c  modalfilter.h  modaloptimize.c  modaloptimize.h  modalstatsTUI.c  modalstatsTUI.h
AOloopControl/doc/: AOloopControl.md  cacao_Control_Setup_Overview.md  cacao_Hardware_Simulation.md  cacao_Initial_Setup.md  cacao_Software_Overview.md  cacao_aux_processes.md  cacao_building_control_matrix.md  cacao_calibration.md  cacao_conf_directory.md  cacao_managing_processes.md  cacao_offsetting.md  cacao_predictive_control.md  cacao_running_loop_mode.md  cacao_setting_up_hardware_interfaces.md  cacao_sharedmem_streams.md  cacao_stepbystep_example.md  cacao_top_guide.md
AOloopControl/docdir/: AOloopControl-slides.html  AOloopControl.html  AOloopControl.md  AOloopControl.md.post  AOloopControl_ProgGuide.html  AOloopControl_ProgGuide.md  AOloopControl_ProgGuide.md.post  SCExAO_extremeAOloop.ppt  a.out  aolmkmodes.html  aolmkmodes.md  aolmkmodes.md.post  rundoc  sharedmemstreams.html  sharedmemstreams.md  sharedmemstreams.md.post
AOloopControl/examples/: README.md
AOloopControl/scripts/: .cacao-calib-archive.swp  .cacao-fpslistadd.swp  aolconf  cacao  cacao-NULL  cacao-RMdecode  cacao-calib-apply  (+55 more)
AOloopControl_DM/: AOloopControl_DM.c  AOloopControl_DM.h  AOloopControl_DM_TTcircle_astrogrid.c  AOloopControl_DM_comb.c  AOloopControl_DM_comb.h  AOloopControl_DM_config.c  AOloopControl_DM_init.c  AOloopControl_DM_runtimecomp.c  AOloopControl_DM_toolbox.c  AOloopControl_DM_turbusimul.c  CMakeLists.txt  DMturbulence.c  DMturbulence.h  mk3Ddmgrid.c  mk3Ddmgrid.h  pokerndmodes.c  pokerndmodes.h
AOloopControl_IOtools/: AOloopControl_IOtools.c  AOloopControl_IOtools.h  AOloopControl_IOtools_RTLOGsave.c  AOloopControl_IOtools_camerainput.c  AOloopControl_IOtools_datastream_processing.c  AOloopControl_IOtools_load_image_sharedmem.c  CMakeLists.txt  README.md  WFScamsim.c  WFScamsim.h  WFSmap.c  WFSmap.h  acquireWFS.c  acquireWFSim.c  acquireWFSim.h  acquireWFSspec.c  acquireWFSspec.h  ao188_preprocessor.c  ao188_preprocessor.h  extract_spectra.c  extract_spectra.h  findspots.c  findspots.h  norm_spectra.c  norm_spectra.h  pl_column_sum.c  pl_column_sum.h  pl_trace_renorm.c  pl_trace_renorm.h
AOloopControl_PredictiveControl/: .gitignore  AOloopControl_PredictiveControl.c  AOloopControl_PredictiveControl.h  AOloopControl_PredictiveControl_builPFloop_WatchInput.c  AOloopControl_PredictiveControl_mapPredictiveFilter.c  AOloopControl_PredictiveControl_setPFsimpleAve.c  AOloopControl_PredictiveControl_testPredictiveFilter.c  CMakeLists.txt  README.md
AOloopControl_acquireCalib/: AOloopControl_acquireCalib.c  AOloopControl_acquireCalib.h  CMakeLists.txt  README.md  acquireWFSlincalib.c  acquireWFSlincalib.h  measure_linear_resp.c  measure_linear_resp.h
AOloopControl_compTools/: .gitignore  AOloopControl_compTools.c  AOloopControl_compTools.h  CMakeLists.txt
AOloopControl_computeCalib/: .gitignore  AOloopControl_computeCalib.c  AOloopControl_computeCalib.h  AOloopControl_computeCalib_CM.c  AOloopControl_computeCalib_Hadamard.c  AOloopControl_computeCalib_dm.c  AOloopControl_computeCalib_loDMmodes.c  AOloopControl_computeCalib_modes.c  AOloopControl_computeCalib_processRM.c  CMakeLists.txt  README.md  compute_control_modes.c  mkmodes.c  mkmodes.h
computeCalib/: .gitignore  AOloopControl_computeCalib_CM.c  AOloopControl_computeCalib_dm.c  AOloopControl_computeCalib_loDMmodes.c  AOloopControl_computeCalib_processRM.c  CMakeLists.txt  README.md  RM2zonal.c  RM2zonal.h  actmap_sample2D.c  actmap_sample2D.h  computeCalib.c  computeCalib.h  computeHadamard.c  computeHadamard.h  compute_control_modes.c  compute_control_modes.h  compute_masksWFSDM.c  compute_masksWFSDM.h  compute_straight_CM.c  compute_straight_CM.h  generateRMWFS.c  generateRMWFS.h  maskextrapolate.c  maskextrapolate.h  mkmodes.c  mkmodes.h  modes_spatial_extrapolate.c  modes_spatial_extrapolate.h
src/: CLImain.c  Config.h.in  Makefile.am  cacao  cacao_config.h.in  config.h.in  configure.ac
(+2042 files in other folders)
